--- a/CG.html
+++ b/CG.html
@@ -6,7 +6,7 @@
       <td><a href="https://imgflip.com/gif/2izx0k"><img src="https://i.imgflip.com/2izx0k.gif"  width="500" height="400" /></td>
     </tr>
     <tr>
-      <td align="center" valign="middle"><a href="https://leooooii.github.io/CG/hw/hw1.html">hw0.html</a></td>
+      <td align="center" valign="middle"><a href="https://leooooii.github.io/CG/hw1/hw1.html">hw1.html</a></td>
     </tr>
   </table>
   <p>&nbsp;</p>
