--- a/hw1/hw1.html
+++ b/hw1/hw1.html
@@ -257,14 +257,14 @@
         
         function animate() {
           controls.update();
-          if(car.position.x==-110)turn=true;
+         /* if(car.position.x==-110)turn=true;
           if(car.position.x==80)turn=false;
-          if(angle!=0&&turn=false)
+          if(angle!=0&&turn==false)
           {
             angle+=10;
 
             car.rotation.y=angle;            
-          }
+          }*/
 
           //if(car.position.x==80&&turn==false)car.rotation.y=
           var dt = clock.getDelta();
