--- a/CG.html
+++ b/CG.html
@@ -2,8 +2,8 @@
 <div align="center">
   <table width="500" height="400" border="1">
     <tr>
-	   <a href="mailto:a1273664413@outlook.com"><font color="red"><u>leo:a1273664413@outlook.com</font></u></a>
-      <td><a href="https://imgflip.com/gif/2izx0k"><img src="https://i.imgflip.com/2izx0k.gif"  width="500" height="400" /></td>
+	   <a href="mailto:a1273664413@outlook.com"><font color="red"><u>Leo: a1273664413@outlook.com</font></u></a>
+      <td><a href="https://leooooii.github.io/CGhw/hw1/hw1.html"><img src="https://imgur.com/Hd3OMwc.gif"  width="500" height="400" /></td>
     </tr>
     <tr>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw1/hw1.html">hw1.html</a></td>
