--- a/hw1/hw1.html
+++ b/hw1/hw1.html
@@ -209,12 +209,12 @@
           scene = new THREE.Scene();
 
           camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
-          camera.position.z = 400;
+          camera.position.z = 300;
           scene.add(camera);
 
           renderer = new THREE.WebGLRenderer();
           renderer.setSize(window.innerWidth, window.innerHeight);
-          renderer.setClearColor(0x888888);
+          renderer.setClearColor(0x444444444);
 
           controls = new THREE.OrbitControls(camera, renderer.domElement);
           document.body.appendChild(renderer.domElement);
@@ -223,6 +223,8 @@
           light.position.set(200, 200, 200);
           scene.add(light);
           //////////////////////////////////////////////////////////////
+
+
           var gridXZ = new THREE.GridHelper(250, 20, 'red', 'white');
           scene.add(gridXZ);
           
@@ -238,14 +240,31 @@
           box.position.set(0,10,0);
           plane1.rotation.x=-Math.PI/2;
           plane1.position.x=60
+          plane1.position.y=0.1;
           plane2.rotation.x=-Math.PI/2;
           plane2.position.x=-80
+          plane2.position.y=0.1;
           scene.add(triangle2());
           scene.add(triangle1());
           car=buildcar();
           scene.add(car);
           car.position.x=90;
           //car.rotation.z=-Math.PI/4;
+
+          light2 = new THREE.SpotLight(0xffffff, 0.5);
+          light2.position.set(0, 100, 0);
+          light2.angle = 0.2;
+          light2.penumbra = 0.5
+          scene.add(light2);
+          light2.target = car;
+          slhelper = new THREE.SpotLightHelper (light2);
+          lschelper = new THREE.CameraHelper(light2.shadow.camera)  
+         // scene.add (slhelper)
+          //scene.add(lschelper);
+
+
+
+
         }
 
         function onWindowResize() {
