--- a/hw2/hw2.html
+++ b/hw2/hw2.html
@@ -69,7 +69,7 @@ function init() {
   renderer.setPixelRatio(window.devicePixelRatio);
   renderer.setSize(window.innerWidth, window.innerHeight);
   container.appendChild(renderer.domElement);
-  renderer.setClearColor (0xffffff);
+  renderer.setClearColor (0x444444444);
 
   camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 2000);
   camera.position.z = 100;
@@ -79,7 +79,7 @@ function init() {
 
   scene = new THREE.Scene();
 
-  var ambient = new THREE.AmbientLight(0x444444);
+  var ambient = new THREE.AmbientLight(0xffffff);
   scene.add(ambient);
 	
   gridxz = new THREE.GridHelper (200, 20,'red','black');
@@ -175,7 +175,7 @@ function unitize (object, targetSize) {
 	theObject.add (object);
 	object.scale.set (scaleSet, scaleSet, scaleSet);
 	object.position.set (-center.x*scaleSet, -center.y*scaleSet, -center.z*scaleSet);
-	
+	theObject.rotation.x=Math.PI/2;
 	return theObject;
 			
 }
