--- a/hw2/hw2.html
+++ b/hw2/hw2.html
@@ -227,15 +227,15 @@ function readTpose ( targetSize=10) {
   var onError = function(xhr) {};
 
   var mtlLoader = new THREE.MTLLoader();
-  mtlLoader.setPath('https://leooooii.github.io/CGhw/hw2/Aladdin/');
-  mtlLoader.load('Aladdin'+'.mtl', function(materials) {
+  mtlLoader.setPath('https://leooooii.github.io/CGhw/hw2/hero/');
+  mtlLoader.load('materials'+'.mtl', function(materials) {
 
     materials.preload();
 
     var objLoader = new THREE.OBJLoader();
     objLoader.setMaterials(materials);
-    objLoader.setPath('https://leooooii.github.io/CGhw/hw2/Aladdin/');
-    objLoader.load('Aladdin'+'.obj', function(object) {
+    objLoader.setPath('https://leooooii.github.io/CGhw/hw2/hero/');
+    objLoader.load('model'+'.obj', function(object) {
 		
 		Thead =  unitize (object, targetSize);
 		//theObject.add ( new THREE.BoxHelper (theObject) )
@@ -294,10 +294,8 @@ function animate() {
 	 var localPlane1 = new THREE.Plane( new THREE.Vector3( 0,  1, 0 ), -8.5 );
      var localPlane2 =new THREE.Plane( new THREE.Vector3( 0,  -1, 0 ), 8.5 );
      var localPlane3 =new THREE.Plane( new THREE.Vector3( 1,  0, 0 ), -5.5 );
-
+	 var localPlane4 = new THREE.Plane( new THREE.Vector3( 0,  1, 0 ),-5 );
 	if(tankhead != undefined ) {
-		//console.log(tankhead.children[0].children[0]);
-		 console.log(tankhead.children[0].children[0]);
  		 for(let i=0;i<9;i++)
         tankhead.children[0].children[0].material[i].clippingPlanes = [localPlane1];
 		tankhead.rotation.y=angel;
@@ -308,7 +306,9 @@ function animate() {
 		tankbody.rotation.y=-angel;
     }
     	if(Thead != undefined ) {
-    	console.log(Thead.children[0].children[1]);
+    	//console.log(Thead.children[0].children[0].material);
+    	Thead.children[0].children[0].material.clippingPlanes = [localPlane4];
+    	Thead.rotation.y=-angel;
  		
     }
 
