--- a/CG.html
+++ b/CG.html
@@ -4,9 +4,12 @@
     <tr>
 	   <a href="mailto:a1273664413@outlook.com"><font color="red"><u>Leo: a1273664413@outlook.com</font></u></a>
       <td><a href="https://leooooii.github.io/CGhw/hw1/hw1.html"><img src="https://imgur.com/VG3FNEj.gif"  width="500" height="400" /></td>
+       <td><a href="https://leooooii.github.io/CGhw/hw2/hw2.html"><img src="https://imgur.com/BGCSPlj.gif"  width="500" height="400" /></td>
+      
     </tr>
     <tr>
       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw1/hw1.html">hw1.html</a></td>
+       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw2/hw2.html">hw2.html</a></td>
     </tr>
   </table>
   <p>&nbsp;</p>
