--- a/hw2/hw2.html
+++ b/hw2/hw2.html
@@ -13,7 +13,7 @@
 	}
 
 	#info {
-	  color: #000000;
+	  color: #ffffff;
 	  position: absolute;
 	  top: 10px;
 	  width: 100%;
@@ -35,6 +35,7 @@
 	<script src="https://threejs.org/examples/js/controls/OrbitControls.js">
 	</script>
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5.1/dat.gui.min.js"></script>
 	<!--script src="https://rawgit.com/mrdoob/three.js/master/examples/js/loaders/DDSLoader.js"></script-->
 	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/MTLLoader.js"></script>
 	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/OBJLoader.js"></script>
@@ -48,14 +49,106 @@ var Thead,body,leftarm,rightarm;
 var theObject;
 var mouseX = 0,
   mouseY = 0;
-
+var intKey = [];
 var windowHalfX = window.innerWidth / 2;
 var windowHalfY = window.innerHeight / 2;
 var controls;
 var bs;
 var modelName;
 var theModel;
+var gcontrol;
+var tankx=0,tankz=0,cannon=0,body=0;
+var clock = new THREE.Clock();
+var period =10;
 
+
+var pose1={
+      tankx: 0,
+        tankz: 0,
+        cannon: 1,
+        body: 0.875
+};
+var pose2={
+    tankx: 0,
+        tankz: 0,
+        cannon: 1.57,
+        body: 1.57
+};
+var pose3={
+        tankx: 0,
+        tankz: -8,
+        cannon: 2.7058686907102647,
+        body: 1.57
+};
+var pose4={
+        tankx: 0,
+        tankz: -16,
+        cannon: 2.7058686907102647,
+        body: 3.14
+};
+var pose5={
+      tankx: -20,
+        tankz: -16,
+        cannon: 2.7058686907102647,
+        body: 3.14
+};
+var pose6={
+  tankx: -40,
+        tankz: -16,
+        cannon: 1.5,
+        body: 0.5267040851612101
+};
+var pose7={
+   tankx: -20,
+        tankz: -16,
+        cannon: 0,
+        body: 0
+};
+var pose8={
+      tankx: 0,
+        tankz: -16,
+        cannon: 0,
+        body: 0
+};
+var pose9={
+        tankx: 0,
+        tankz: -16,
+        cannon: -1,
+        body: -0.785,
+};
+var pose10={
+        tankx: 0,
+        tankz: -8,
+        cannon: -1.57,
+        body: -1.57
+};
+var pose11={
+        tankx: 0,
+        tankz: 0,
+        cannon: -1.57,
+        body: -1.57
+};
+var pose12={
+        tankx: 0,
+        tankz: 0,
+        cannon: 0,
+        body: 0
+};
+var Nkeys = 
+[{s: 0,pose: pose12},
+{s: 0.08, pose: pose1},
+{s:0.16,pose:pose2},
+{s:0.24,pose :pose3},
+{s:0.32,pose: pose4},
+{s:0.40,pose :pose5},
+{s:0.48, pose:pose6},
+{s:0.56,pose:pose7},
+{s:0.64,pose:pose8},
+{s:0.72,pose:pose9},
+{s:0.79,pose:pose10},
+{s:0.87,pose:pose11},
+{s:1,pose:pose12}];
+var key=Nkeys;
 
 init();
 animate();
@@ -82,10 +175,10 @@ function init() {
   scene = new THREE.Scene();
 
   var ambient = new THREE.AmbientLight(0xffffff);
- // scene.add(ambient);
+ //scene.add(ambient);
 	
   gridxz = new THREE.GridHelper (200, 20,'red','black');
-  scene.add (gridxz);
+  //scene.add (gridxz);
 
   let axis = new THREE.AxisHelper (20);
  // scene.add (axis);
@@ -96,7 +189,9 @@ function init() {
 
   var  light = new THREE.PointLight(0xffffff);
   light.position.set(50,300, -50);
-  scene.add(light);
+    // shadow map settings
+    light.castShadow = true;
+    scene.add(light);
   window.addEventListener('resize', onWindowResize, false);
   readModel();
   readTpose();
@@ -108,6 +203,24 @@ function init() {
   var floor = new THREE.Mesh (new THREE.PlaneGeometry(200,200), new THREE.MeshLambertMaterial({side: THREE.DoubleSide,map:texture}));
   floor.rotation.x=-Math.PI/2;
   scene.add(floor);
+   floor.receiveShadow = true;
+  gcontrol = new function() {
+  this.tankx = 0;
+  this.tankz = 0
+  this.cannon = 0;
+  this.body = 0;
+  //this.turn = false;
+	};
+  var gui = new dat.GUI({
+    load: loadJSON(),
+    //preset: "run"
+  });
+  gui.domElement.id = 'gui';
+  gui.remember(gcontrol);
+  gui.add(gcontrol, 'tankx', -10, 10);  
+  gui.add(gcontrol, 'tankz', -10, 10);
+  gui.add(gcontrol, 'cannon', -2*Math.PI, 2*Math.PI);
+  gui.add(gcontrol, 'body', -2*Math.PI, 2*Math.PI);  
   ///////////////////////////////////////////////////////////////////	
 	function onWindowResize() {
 
@@ -122,6 +235,118 @@ function init() {
 	}
   
 }
+function loadJSON() {
+  return {
+  "preset": "pose6",
+  "remembered": {
+    "Default": {
+      "0": {
+        "tankx": 0,
+        "tanxz": 0,
+        "cannon": 0,
+        "body": 0,
+      }
+    },
+    "pose1": {
+      "0": {
+   		"tankx": 0,
+        "tanxz": 0,
+        "cannon": 1,
+        "body": 0.785,
+      }
+    },
+    "pose2": {
+      "0": {
+        "tankx": 0,
+        "tankz": 0,
+        "cannon": 1.57,
+        "body": 1.57
+      }
+    },
+    "pose3": {
+      "0": {
+        "tankx": 0,
+        "tankz": -5.231158741719555,
+        "cannon": 2.7058686907102647,
+        "body": 1.57
+      }
+    },
+     "pose4": {
+      "0": {
+        "tankx": 0,
+        "tankz": -5.231158741719555,
+        "cannon": 2.7058686907102647,
+        "body": 3.14
+      }
+    },
+       "pose5": {
+      "0": {
+        "tankx": -8.482641417819858,
+        "tankz": -5.231158741719555,
+        "cannon": 2.7058686907102647,
+        "body": 3.14
+      }
+    },
+    "pose6": {
+      "0": {
+        "tankx": -8.482641417819858,
+        "tankz": -5.231158741719555,
+        "cannon": 1.5,
+        "body": 0.5267040851612101
+      }
+    },
+    "pose7": {
+      "0": {
+        "tankx": -8.482641417819858,
+        "tankz": -5.231158741719555,
+        "cannon": 0,
+        "body": 0
+      }
+    },
+      "pose8": {
+      "0": {
+        "tankx": 0,
+        "tankz": -5.231158741719555,
+        "cannon": 0,
+        "body": 0
+      }
+    },
+          "pose9": {
+      "0": {
+        "tankx": 0,
+        "tankz": -5.231158741719555,
+        "cannon": -1,
+        "body": -0.785,
+      }
+    },
+        "pose10": {
+      "0": {
+        "tankx": 0,
+        "tankz": -5.231158741719555,
+        "cannon": -1.57,
+        "body": -1.57
+      }
+  },
+        "pose11": {
+      "0": {
+        "tankx": 0,
+        "tankz": 0,
+        "cannon": -1.57,
+        "body": -1.57
+      }
+  },
+          "pose12": {
+      "0": {
+        "tankx": 0,
+        "tankz": 0,
+        "cannon": 0,
+        "body": 0
+      }
+  },
+  },
+  "closed": false,
+  "folders": {}
+}}
 
 function readModel ( targetSize=40) {
 
@@ -160,7 +385,8 @@ function readModel ( targetSize=40) {
       /*  var localPlane = new THREE.Plane( new THREE.Vector3( 0,  1, 0 ), 0 );
         for(let i=0;i<9;i++)
         tankhead.children[0].children[0].material[i].clippingPlanes = [localPlane];*/
-
+          tankhead.children[0].children[0].castShadow = true;
+          tankhead.children[0].children[0].receiveShadow = true;
         scene.add(tankhead);
         
     }, onProgress, onError);
@@ -202,6 +428,8 @@ function readbody ( targetSize=40) {
 
         //theObject.rotation.y=-Math.PI/2;
         tankbody.position.y=7;
+        tankbody.children[0].children[0].castShadow = true;
+        tankbody.children[0].children[0].receiveShadow = true;
       //  tankbody.position.y=7;
       /*  var localPlane = new THREE.Plane( new THREE.Vector3( 0,  1, 0 ), 0 );
         for(let i=0;i<9;i++)
@@ -290,20 +518,44 @@ function unitize (object, targetSize) {
 
 var angel=0;
 function animate() {
+	  var ts = clock.getElapsedTime();
+	  var t = clock.getElapsedTime() % period;
+	  var s = t / period; // normalized time
+	   for (var i = 1; i < key.length; i++) {
+     	if (key[i].s > s)
+    	break;
+   }
+  // take previous one
+   i = i-1;
+
+	// linearly interpolate between i & i+1
+  
+  var tt = (s - key[i].s) / (key[i + 1].s - key[i].s);
+  //
+  var tankxs = (1 - tt) * key[i].pose.tankx + tt * key[i + 1].pose.tankx;
+  var tankzs = (1 - tt) * key[i].pose.tankz + tt * key[i + 1].pose.tankz;
+  var cannons = (1 - tt) * key[i].pose.cannon + tt * key[i + 1].pose.cannon;
+  var bodys = (1 - tt) * key[i].pose.body + tt * key[i + 1].pose.body;
+
 	angel+=0.01;
 	 var localPlane1 = new THREE.Plane( new THREE.Vector3( 0,  1, 0 ), -8.5 );
      var localPlane2 =new THREE.Plane( new THREE.Vector3( 0,  -1, 0 ), 8.5 );
      var localPlane3 =new THREE.Plane( new THREE.Vector3( 1,  0, 0 ), -5.5 );
 	 var localPlane4 = new THREE.Plane( new THREE.Vector3( 0,  1, 0 ),-5 );
 	if(tankhead != undefined ) {
+		console.log(tankhead.children[0].children[0])
  		 for(let i=0;i<9;i++)
         tankhead.children[0].children[0].material[i].clippingPlanes = [localPlane1];
-		tankhead.rotation.y=angel;
+  		tankhead.rotation.y= cannons;
+		tankhead.position.x=tankxs;
+		tankhead.position.z=tankzs;
 	}
 		if(tankbody != undefined ) {
  		 for(let i=0;i<9;i++)
         tankbody.children[0].children[0].material[i].clippingPlanes = [localPlane2];
-		tankbody.rotation.y=-angel;
+		tankbody.rotation.y=bodys;
+		tankbody.position.x=tankxs;
+		tankbody.position.z=tankzs;
     }
     	if(Thead != undefined ) {
     	//console.log(Thead.children[0].children[0].material);
