--- a/CG.html
+++ b/CG.html
@@ -5,7 +5,7 @@
 	   <a href="mailto:a1273664413@outlook.com"><font color="red"><u>Leo: a1273664413@outlook.com</font></u></a>
       <td><a href="https://leooooii.github.io/CGhw/hw1/hw1.html"><img src="https://imgur.com/VG3FNEj.gif"  width="500" height="400" /></td>
        <td><a href="https://leooooii.github.io/CGhw/hw2/hw2.html"><img src="https://imgur.com/mojAZEW.gif"  width="500" height="400" /></td>
-       <td><a href="https://leooooii.github.io/CGhw/hw2/hw2.html"><img src="https://imgur.com/mojAZEW.gif"  width="500" height="400" /></td>
+       <td><a href="https://leooooii.github.io/CGhw/hw3/hw3.html"><img src="https://imgur.com/hLfoWhi.gif"  width="500" height="400" /></td>
       
     </tr>
     <tr>
