--- a/hw3/hw3.html
+++ b/hw3/hw3.html
@@ -30,6 +30,9 @@
 
 <body> 
 	<div id="info">hw3
+     <p> Press WASD to Control car, 
+         Q to Change Camera
+ </p>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/107/three.min.js"></script>
 	<script src="https://threejs.org/build/three.min.js"></script>
@@ -41,7 +44,8 @@
 	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/MTLLoader.js"></script>
 	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/loaders/OBJLoader.js"></script>
   <script src="https://jyunming-chen.github.io/tutsplus/js/KeyboardState.js"></script>
-	
+	<script src="https://raw.githack.com/mrdoob/three.js/dev/examples/js/misc/Gyroscope.js"></script>
+
 <script>
 var camera, scene, renderer;
 var car,traffic,gas;
@@ -55,7 +59,7 @@ var keyboard = new KeyboardState();
 var force = new THREE.Vector3();
 var power, angle;
 var obstacles = [];
-
+var gyro,controlcamera,camera2,turn=false,light2;
 (function() {
   Math.clamp = function(val,min,max){
     return Math.min(Math.max(val,min),max);
@@ -66,7 +70,46 @@ var obstacles = [];
 init();
 animate();
 
+function loadCubemap() {
 
+  var path = "https://threejs.org/examples/textures/cube/SwedishRoyalCastle/";
+  var format = '.jpg';
+  var urls = [
+    path + 'px' + format, path + 'nx' + format,
+    path + 'py' + format, path + 'ny' + format,
+    path + 'pz' + format, path + 'nz' + format
+  ];
+  var loader = new THREE.CubeTextureLoader();
+  loader.setCrossOrigin ('');
+  var cubeMap = loader.load(urls);
+  cubeMap.format = THREE.RGBFormat;
+  return cubeMap;
+  
+}
+function initHUD() {
+  // sceneHUD: a simple line boundary
+  sceneHUD = new THREE.Scene();
+  cameraHUD1 = new THREE.OrthographicCamera(-100, 100, 100, -100, -50, 50);
+  cameraHUD1.position.z = 20;  // for border
+  
+  cameraHUD2 = new THREE.OrthographicCamera(-100,100,100,-100,-75,75);
+  cameraHUD2.position.set (0,30,0)
+  cameraHUD2.up.set (0,0,-1)   // for top view
+  cameraHUD2.lookAt (new THREE.Vector3())
+
+  var lineGeometry = new THREE.Geometry();
+  lineGeometry.vertices.push(new THREE.Vector3(-10, -10, 0),
+    new THREE.Vector3(10, -10, 0),
+    new THREE.Vector3(10, 10, 0),
+    new THREE.Vector3(-10, 10, 0),
+    new THREE.Vector3(-10, -10, 0));
+  var line = new THREE.Line(lineGeometry,
+    new THREE.LineBasicMaterial({
+      color: 0xffffff
+    }));
+ // sceneHUD.add(line);
+  
+}
 function init() {
 
   container = document.createElement('div');
@@ -76,30 +119,40 @@ function init() {
   renderer.setSize(window.innerWidth, window.innerHeight);
   container.appendChild(renderer.domElement);
   renderer.setClearColor (0x444444444);
-
+ camera2=new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 1, 1000);
   camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 2000);
   orthoCam= new THREE.OrthographicCamera(-15,15,15,-15,-35,35);
-  camera.position.y=100;
-  controls = new THREE.OrbitControls(camera, renderer.domElement);
+  camera.position.set(0,50,120);
+   controls = new THREE.OrbitControls(camera, renderer.domElement);
+  
+  controls.enableKeys = false;
+  
+  document.body.appendChild(renderer.domElement);
 
+  
   // scene
 
-  scene = new THREE.Scene();
+      scene = new THREE.Scene();
+
   gridxz = new THREE.GridHelper (200, 20,'red','black');
   //scene.add (gridxz);
-
+ gyro = new THREE.Gyroscope();
+    scene.add (gyro)
+    gyro.add (camera)
   let axis = new THREE.AxisHelper (20);
  // scene.add (axis);
   	
   var directionalLight = new THREE.DirectionalLight(0xffffff);
   directionalLight.position.set(-10, 5, 1).normalize();
   scene.add(directionalLight);
-
+ var directionalLight2 = new THREE.DirectionalLight(0xffffff);
+  directionalLight2.position.set(10, 5, 20).normalize();
+  scene.add(directionalLight2);
   var  light = new THREE.PointLight(0xffffff);
   light.position.set(50,300, -50);
     // shadow map settings
   light.castShadow = true;
-  scene.add(light);
+  //scene.add(light);
   light.shadow.mapSize.width = 1024;
   light.shadow.mapSize.height = 1024;
   light.shadow.camera.near = 10;
@@ -107,7 +160,7 @@ function init() {
   light.shadow.camera.fov = light.angle / Math.PI * 180 * 2;
 
    var light2 = new THREE.SpotLight(0xffffff, 0.5);
-  light2.position.set(0, 100, 0);
+  light2.position.set(50, 100, 0);
   light2.angle = 0.9;
   light2.penumbra = 0.9
   scene.add(light2);
@@ -156,65 +209,80 @@ function init() {
       uvs2[c++] = j / phiSegments2 / 1;
     }
   }
-
   var road1 = new THREE.Mesh(turn1, material);
   road1.rotation.x=Math.PI/2;
   road1.rotation.z=Math.PI/2;
   road1.position.set(-60,0.1,60);
+   road1.receiveShadow = true;
   var road2= new THREE.Mesh(new THREE.PlaneGeometry(120,30),material);
   road2.rotation.x=Math.PI/2;
   road2.position.set(0,0.1,75);
+     road2.receiveShadow = true;
   var road3 =new THREE.Mesh(turn1,material);
   road3.rotation.x=Math.PI/2;
   road3.position.set(60,0.1,60);
+     road3.receiveShadow = true;
   var road4=new THREE.Mesh(new THREE.PlaneGeometry(120,30),material);
   road4.rotation.x=Math.PI/2;
   road4.rotation.z=Math.PI/2;
   road4.position.set(75,0.1,0);
+     road4.receiveShadow = true;
   var road5=new THREE.Mesh(turn1,material);
   road5.rotation.x=Math.PI/2;
   road5.rotation.z=-Math.PI/2;
   road5.position.set(60,0.1,-60);
+     road5.receiveShadow = true;
   var road6= new THREE.Mesh(new THREE.PlaneGeometry(10,30),material);
   road6.rotation.x=Math.PI/2;
   road6.position.set(55,0.1,-75);
+     road6.receiveShadow = true;
   var road7=new THREE.Mesh(turn1,material);
   road7.rotation.x=Math.PI/2;
   road7.rotation.z=Math.PI;
   road7.position.set(50,0.1,-60);
+     road7.receiveShadow = true;
   var road8=new THREE.Mesh(new THREE.PlaneGeometry(90,30),material);
   road8.rotation.x=Math.PI/2;
   road8.rotation.z=Math.PI/2;
   road8.position.set(35,0.1,-15);
+     road8.receiveShadow = true;
   var road9=new THREE.Mesh(turn1,material);
   road9.rotation.x=Math.PI/2;
   road9.position.set(20,0.1,30);
+     road9.receiveShadow = true;
   var road10= new THREE.Mesh(new THREE.PlaneGeometry(10,30),material);
   road10.rotation.x=Math.PI/2;
   road10.position.set(15,0.1,45);
+     road10.receiveShadow = true;
   var road11=new THREE.Mesh(turn1,material);
   road11.rotation.x=Math.PI/2;
   road11.rotation.z=Math.PI/2;
   road11.position.set(10,0.1,30);
+     road11.receiveShadow = true;
   var road12=new THREE.Mesh(new THREE.PlaneGeometry(90,30),material);
   road12.rotation.x=Math.PI/2;
   road12.rotation.z=Math.PI/2;
   road12.position.set(-5,0.1,-15);
+     road12.receiveShadow = true;
   var road13=new THREE.Mesh(turn1,material);
   road13.rotation.x=Math.PI/2;
   road13.rotation.z=-Math.PI/2;
   road13.position.set(-20,0.1,-60);
+     road13.receiveShadow = true;
   var road14 = new THREE.Mesh(turn1, material);
   road14.rotation.x=Math.PI/2;
   road14.rotation.z=Math.PI;
   road14.position.set(-60,0.1,-60);
+     road14.receiveShadow = true;
   var road15= new THREE.Mesh(new THREE.PlaneGeometry(40,30),material);
   road15.rotation.x=Math.PI/2;
   road15.position.set(-40,0.1,-75);
+     road15.receiveShadow = true;
   var road16=new THREE.Mesh(new THREE.PlaneGeometry(120,30),material);
   road16.rotation.x=Math.PI/2;
   road16.rotation.z=Math.PI/2;
   road16.position.set(-75,0.1,0);
+    road16.receiveShadow = true;
   var texture3 = new THREE.TextureLoader().load("https://cdn.shopify.com/s/files/1/0698/1729/products/SPC-001_A.jpg?v=1427417612");
    texture3.repeat.set(0.1, 1);
   texture3.wrapS = THREE.RepeatWrapping;
@@ -226,6 +294,12 @@ function init() {
  // renderer.autoClear = false;
   ///////////////////////////////////////////////////////////////////	
    scene.add(road1,road2,road3,road4,road5,road6,road7,road8,road9,road10,road11,road12,road13,road14,road15,road16,finish);
+    var star= new THREE.TextureLoader().load( "https://media3.s-nbcnews.com/i/MSNBC/Components/Video/201802/NewPlanets.jpg");
+    scene.background=star;
+  initHUD();
+  renderer.autoClear = false;
+    // scene.add (slhelper)
+    //scene.add(lschelper);
 }
 
 function readcar ( modelname,targetSize=10) {
@@ -256,6 +330,7 @@ function readcar ( modelname,targetSize=10) {
     scene.add(car);
     car.children[0].children[0].castShadow = true;
     car.children[0].children[0].receiveShadow = true;  
+      car.add (gyro)
     }, onProgress, onError);
 
   });
@@ -408,7 +483,7 @@ function unitize1 (object, targetSize) {
 	object.scale.set (scaleSet, scaleSet, scaleSet);
 	//object.position.set (-center.x*scaleSet, -center.y*scaleSet, -center.z*scaleSet);
   object.rotation.y=Math.PI/2;
-  object.position.set(0,0,67.5)
+  object.position.set(0,0.2,67.5)
 	return theObject;
 			
 }
@@ -422,22 +497,23 @@ function update(dt) {
 
   if (keyboard.pressed("space"))  
     power = 0.1;               
-  if (keyboard.pressed("up"))  
-    power *= 1.2;        
-  if (keyboard.pressed("down"))  
-    power /= 1.5;   
-  
-  power = Math.clamp (power, 0, 80.0); 
+  if (keyboard.pressed("W"))  
+    power *= 1.05;        
+  if (keyboard.pressed("S"))  
+    power /= 1.05;   
+    if (keyboard.pressed("Q"))  
+    turn=!turn;   
+  power = Math.clamp (power, 0, 50.0); 
   
   
   var angle_thrust = angle;
-  if (keyboard.pressed("left"))
-    angle_thrust += 0.4;
-  if (keyboard.pressed("right"))
-    angle_thrust -= 0.4;
+  if (keyboard.pressed("A"))
+    angle_thrust += 2;
+  if (keyboard.pressed("D"))
+    angle_thrust -= 2;
     
   // compute force
-  var thrust = new THREE.Vector3(1,0,0).multiplyScalar(power).applyAxisAngle       (new THREE.Vector3(0,1,0), angle_thrust);
+  var thrust = new THREE.Vector3(1,0,0).multiplyScalar(power).applyAxisAngle  (new THREE.Vector3(0,1,0), angle_thrust);
   force.copy (thrust);
   force.add(vel.clone().multiplyScalar(-2))
 
@@ -448,14 +524,18 @@ function update(dt) {
 
 function animate() {
   controls.update();
-
+ 
   var dt = clock.getDelta();
   update(dt);
-
   // car update
-  if(car !=undefined){
+  if(car !=undefined)
+  {
   car.position.copy(pos);
   car.rotation.y = angle;
+  camera2.position.copy(car.localToWorld(new THREE.Vector3(-100,20,80)));
+  camera2.lookAt(car.position);
+  if(turn)controlcamera=camera2;
+  else controlcamera=camera;
   console.log(car.children[0].children[0]);
 }
   requestAnimationFrame(animate);
@@ -464,11 +544,29 @@ function animate() {
 }
 
 function render() {
- // renderer.clear();
-  renderer.render(scene, camera);
 
+  var WW = window.innerWidth;
+  var HH = window.innerHeight;
+
+  renderer.setScissorTest(true);
+
+  renderer.setViewport(0, 0, WW, HH);
+  camera.aspect = WW / HH;
+  camera.updateProjectionMatrix();
+  
+  renderer.setScissor(0, 0, WW, HH);
+  renderer.clear();
+  renderer.render(scene, controlcamera);
+
+  renderer.setViewport(WW / 2, HH / 2, WW / 3, HH / 3);
+  renderer.setScissor(WW / 2, HH / 2, WW / 3, HH / 3);
+  // no need to set aspect (since it is still ONE)
+  renderer.clear();  // important!
+  renderer.render(sceneHUD, cameraHUD1);  // border
+  renderer.render(scene, cameraHUD2);     // topview
+
+  renderer.setScissorTest(false);
 }
-
 
 </script>
 </body>
