--- a/hw3/hw3.html
+++ b/hw3/hw3.html
@@ -524,9 +524,8 @@ function update(dt) {
 
 function animate() {
   controls.update();
- 
-  var dt = clock.getDelta();
-  update(dt);
+  //console.log(dt);
+  ///update(dt);
   // car update
   if(car !=undefined)
   {
