--- a/CG.html
+++ b/CG.html
@@ -6,12 +6,14 @@
       <td><a href="https://leooooii.github.io/CGhw/hw1/hw1.html"><img src="https://imgur.com/VG3FNEj.gif"  width="500" height="400" /></td>
        <td><a href="https://leooooii.github.io/CGhw/hw2/hw2.html"><img src="https://imgur.com/mojAZEW.gif"  width="500" height="400" /></td>
        <td><a href="https://leooooii.github.io/CGhw/hw3/hw3.html"><img src="https://imgur.com/hLfoWhi.gif"  width="500" height="400" /></td>
+
       
     </tr>
     <tr>
-      <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw1/hw1.html">hw1.html</a></td>
-       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw2/hw2.html">hw2.html</a></td>
-       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw3/hw3.html">hw3.html</a></td>
+      <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw1/hw1.html">hw1</a></td>
+       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw2/hw2.html">hw2</a></td>
+       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw3/hw3.html">hw3</a></td>
+       <td align="center" valign="middle"><a href="https://leooooii.github.io/CGhw/hw4/hw4.html">hw4</a></td>
     </tr>
   </table>
   <p>&nbsp;</p>
